# Penguins

./: README.md  algorithm.h  autonomous_mode.c  grid.h  play.c  print.c  unit_test.c  valid_check.c  valid_check.h
Penguins-main/: CMakeLists.txt  README.md  algorithm.c  autonomous_mode.h  autonomous_output.c  autonomous_output.h  desktop.ini  grid.c  main.c  play.h  print.h  structures.h  unit_test.h
